# uncwork

./: .gitignore  CLAUDE.md  fw-friend-01.ndxml  grd-friend-01.ndxml  grd-friend-02.ndxml  grd-friend-03.ndxml  interactive_multi_asset.ndxml  uav-hostile-01.ndxml  uav-hostile-01.ndxml.bak  uav-hostile-02.ndxml
backend/: .env.example  Cargo.toml
docs/: threshold-defense.md
frontend/: .env.example  .gitignore  CLAUDE.md  FINAL_IMPROVEMENTS.md  FRONTEND_REQUIREMENTS.TSX  IMPROVEMENTS_SUMMARY.md  TACTICAL_REDESIGN.md  TACTICAL_REDESIGN_SUMMARY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx  vite-env.d.ts
frontend/src/components/ui/: panel.tsx  toggle.tsx
frontend/src/config/: constants.ts  env.ts
frontend/src/features/hud/: index.ts
frontend/src/lib/: bbox.ts  cot.ts  sensor.ts  track-path.ts
frontend/src/mock/: battle-sim.ts  fake-cot.ts
frontend/src/stores/: data-source.ts  events.ts  layers.ts  log.ts  replay.ts  selection.ts  view-state.ts  viewport.ts
frontend/src/styles/: globals.css
frontend/src/types/: bbox.ts  cot.ts
scenarios/maneuver/: fw-friend-01.ndxml  grd-friend-01.ndxml  grd-friend-02.ndxml  uav-hostile-01.ndxml  uav-hostile-02.ndxml
scenarios/uav/: fw-friend-01.ndxml  grd-friend-01.ndxml  grd-friend-02.ndxml  grd-friend-03.ndxml  uav-hostile-01.ndxml  uav-hostile-02.ndxml
scripts/: .gitignore  deploy.sh  local.sh
scripts/scenario/: densify-uav.py  gen-fire-and-maneuver.py  gen-main.py  gen-uav-approach-encircle.py  gen-uav-encircle.py  gen-uav.py
(+65 files in other folders)
